--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ include(external/external.cmake)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
 add_executable(${PROJECT_NAME}
+    include/game.hpp
+    src/game.cpp
     src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
