Add base of states and some init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,11 @@ include(external/external.cmake)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
 add_executable(${PROJECT_NAME}
+    include/states/state.hpp
+    include/states/gameState.hpp
     include/game.hpp
+    src/states/state.cpp
+    src/states/gameState.cpp
     src/game.cpp
     src/main.cpp)
 
