Add second state of the game - MainMenuState

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,12 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 add_executable(${PROJECT_NAME}
     include/states/state.hpp
     include/states/gameState.hpp
+    include/states/mainMenuState.hpp
     include/entity.hpp
     include/game.hpp
     src/states/state.cpp
     src/states/gameState.cpp
+    src/states/mainMenuState.cpp
     src/entity.cpp
     src/game.cpp
     src/main.cpp)
