COP: Animation component system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(${PROJECT_NAME}
     include/states/gameState.hpp
     include/states/mainMenuState.hpp
     include/components/movementComponent.hpp
+    include/components/animationComponent.hpp
     include/entity.hpp
     include/player.hpp
     include/button.hpp
@@ -27,6 +28,7 @@ add_executable(${PROJECT_NAME}
     src/states/gameState.cpp
     src/states/mainMenuState.cpp
     src/components/movementComponent.cpp
+    src/components/animationComponent.cpp
     src/entity.cpp
     src/player.cpp
     src/button.cpp
