--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,32 +15,36 @@ include(external/external.cmake)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
 add_executable(${PROJECT_NAME}
-    include/states/state.hpp
-    include/states/gameState.hpp
-    include/states/editorState.hpp
-    include/states/mainMenuState.hpp
-    include/states/settingsState.hpp
-    include/components/hitboxComponent.hpp
-    include/components/movementComponent.hpp
-    include/components/animationComponent.hpp
-    include/GUI/pauseMenu.hpp
-    include/GUI/gui.hpp
-    include/entity.hpp
-    include/player.hpp
-    include/game.hpp
-    src/states/state.cpp
-    src/states/gameState.cpp
-    src/states/editorState.cpp
-    src/states/mainMenuState.cpp
-    src/states/settingsState.cpp
-    src/components/hitboxComponent.cpp
-    src/components/movementComponent.cpp
-    src/components/animationComponent.cpp
-    src/GUI/pauseMenu.cpp
-    src/GUI/gui.cpp
-    src/entity.cpp
-    src/player.cpp
-    src/game.cpp
+    include/states/State.hpp
+    include/states/GameState.hpp
+    include/states/EditorState.hpp
+    include/states/MainMenuState.hpp
+    include/states/SettingsState.hpp
+    include/components/HitboxComponent.hpp
+    include/components/MovementComponent.hpp
+    include/components/AnimationComponent.hpp
+    include/GUI/PauseMenu.hpp
+    include/GUI/Gui.hpp
+    include/map/Tile.hpp
+    include/map/TileMap.hpp
+    include/Entity.hpp
+    include/Player.hpp
+    include/Game.hpp
+    src/states/State.cpp
+    src/states/GameState.cpp
+    src/states/EditorState.cpp
+    src/states/MainMenuState.cpp
+    src/states/SettingsState.cpp
+    src/components/HitboxComponent.cpp
+    src/components/MovementComponent.cpp
+    src/components/AnimationComponent.cpp
+    src/GUI/PauseMenu.cpp
+    src/GUI/Gui.cpp
+    src/map/Tile.cpp
+    src/map/TileMap.cpp
+    src/Entity.cpp
+    src/Player.cpp
+    src/Game.cpp
     src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
