Preparing the base for creating an editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,38 +15,40 @@ include(external/external.cmake)
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
 add_executable(${PROJECT_NAME}
-    include/states/State.hpp
-    include/states/GameState.hpp
-    include/states/EditorState.hpp
-    include/states/MainMenuState.hpp
-    include/states/SettingsState.hpp
+    include/components/AnimationComponent.hpp
     include/components/HitboxComponent.hpp
     include/components/MovementComponent.hpp
-    include/components/AnimationComponent.hpp
-    include/GUI/PauseMenu.hpp
     include/GUI/Gui.hpp
-    #include/map/Tile.hpp
-    #include/map/TileMap.hpp
+    include/GUI/PauseMenu.hpp
+    include/states/EditorState.hpp
+    include/states/GameState.hpp
+    include/states/MainMenuState.hpp
+    include/states/SettingsState.hpp
+    include/states/State.hpp
+    include/states/StateData.hpp
+    include/map/Tile.hpp
+    include/map/TileMap.hpp
     include/Entity.hpp
-    include/Player.hpp
     include/Game.hpp
     include/GraphicsSettings.hpp
-    src/states/State.cpp
-    src/states/GameState.cpp
-    src/states/EditorState.cpp
-    src/states/MainMenuState.cpp
-    src/states/SettingsState.cpp
+    include/Player.hpp
+    src/components/AnimationComponent.cpp
     src/components/HitboxComponent.cpp
     src/components/MovementComponent.cpp
-    src/components/AnimationComponent.cpp
-    src/GUI/PauseMenu.cpp
     src/GUI/Gui.cpp
-    #src/map/Tile.cpp
-    #src/map/TileMap.cpp
+    src/GUI/PauseMenu.cpp
+    src/states/EditorState.cpp
+    src/states/GameState.cpp
+    src/states/MainMenuState.cpp
+    src/states/SettingsState.cpp
+    src/states/State.cpp
+    src/states/StateData.cpp
+    src/map/Tile.cpp
+    src/map/TileMap.cpp
     src/Entity.cpp
-    src/Player.cpp
     src/Game.cpp
     src/GraphicsSettings.cpp
+    src/Player.cpp
     src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
