--- a/config/supportedKeys.ini
+++ b/config/supportedKeys.ini
@@ -1,6 +1,37 @@
 A 0
+B 1
+C 2
 D 3
-S 18
-W 22
-Escape 36
+E 4
+F 5
+G 6
+H 7
+I 8
+J 9
+K 10
+L 11
+M 12
+N 13
+O 14
+P 15
 Q 16
+R 17
+S 18
+T 19
+U 20
+V 21
+W 22
+X 23
+Y 24
+Z 25
+Num0 26
+Num1 27
+Num2 28
+Num3 29
+Num4 30
+Num5 31
+Num6 32
+Num7 33
+Num8 34
+Num9 35
+Escape 36
